<resources>
    <string name="app_name">Kanye Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Quote</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">About</string>

    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="message_subscribe_failed">Failed to subscribe to topicxx</string>
    <string name="message_subscribed">Subscribed to topi</string>

    <string name="eggs_ready">Subscribed to topicxxxxxxxxxxxx</string>
    <string name="notification_channel_name" translatable="true">Push message</string>
    <string name="notification_channel_id">Subscribed to topic</string>
    <string name="notification_title">Today\'s quote:</string>

    <!--here-->

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>
    //TODO
    <string name="timer_run">timerRunnnnn</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <string name="set_time">Set time: %1$s</string>
    <!-- Preference Titles -->
    <string name="timer_notify_header">Timer </string>

    <string name="details_notify_header">Details</string>

    <string name="enable_header">Turn off notifications</string>
    <string name="sound_header">Turn off custom sound</string>

    <string name="disable_header">Turn on notifications</string>
    <string name="snackbar_message">This is your first app launch, set time of receiving notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title_timer">Set time</string>
    <string name="details_title_details">Customize notifications </string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="timer_key">timerKey</string>
    <string name="details_key">detailsKey</string>
    <string name="switch_key">switch</string>
    <string name="sound_key">sound</string>

    <string name="quote_key">Here gonna be quote</string>

    <string name="pref_previously_started">firstLaunchKey</string>
    <string name="pref_first_see_timer">firstTimerKey</string>

    <string name="description">
        \n
        Kanye Notifications delivers you daily dose of Kanye West quotes.\n\n
You will receive messages even if app is closed.\n\n
If you want to cancel receiving notifications go to settings tab.\n\n
After setting time you might wait up to 24h for new quotation.</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="set_time_textview">Set time:</string>
    <string name="email">dan.pykalo@gmail.com</string>
    <string name="contact_description">Spot a bug or want say somth? Email me.</string>


</resources>
