<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scene_container"
    >

    <PreferenceCategory app:title="@string/timer_notify_header">

        <Preference
            app:key="@string/timer_key"
            app:title="@string/signature_title_timer"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory  app:title="@string/details_notify_header">

    <Preference
        app:key="@string/details_key"
        app:title="@string/details_title_details"
        app:useSimpleSummaryProvider="true" />

</PreferenceCategory>

    <PreferenceCategory  >
        <!--todo change txt after switch-->
        <SwitchPreferenceCompat
            android:id="@+id/notificationSwitch"
            app:key="@string/switch_key"
            app:title="@string/enable_header"

            android:defaultValue="false"
            android:textOff="No"
            android:textOn="Yes"
            app:showText="true"

            />
    </PreferenceCategory>

<PreferenceCategory></PreferenceCategory>

    <!--    <PreferenceCategory >
            <SwitchPreferenceCompat
                android:id="@+id/soundSwitch"
                app:key="@string/sound_key"
                app:title="@string/sound_header"

                android:defaultValue="false"
                android:textOff="No"
                android:textOn="Yes"
                app:showText="true"

                />
        </PreferenceCategory>-->

</PreferenceScreen>