<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_about"

    tools:context=".ui.about.AboutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/reportBugTextView"
        android:layout_width="398dp"
        android:layout_height="227dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_description"
        app:layout_constraintBottom_toTopOf="@+id/imegeViewAbout"
        app:layout_constraintEnd_toEndOf="@+id/reportBugTextView"
        app:layout_constraintStart_toStartOf="@+id/reportBugTextView"
        app:layout_constraintTop_toBottomOf="@+id/reportBugTextView"
        app:layout_constraintVertical_bias="0.975" />

    <ImageView
        android:id="@+id/imegeViewAbout"
        android:layout_width="71dp"
        android:layout_height="49dp"

        android:layout_marginBottom="16dp"
        android:autoLink="email"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:srcCompat="@drawable/email" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>
